# BlockKick-CLI

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/blockkick/: cli.py  tx.py
src/blockkick/api/: client.py
src/blockkick/blockchain/: mining.py  transactions.py  tx.py
src/blockkick/wallet/: keys.py  keystore.py
src/wallet/: keys.py  keystore.py
tests/: test_api.py  test_cli.py  test_keystore.py  test_mining.py  test_transactions.py  test_tx.py
