[project]
name = "blockkick"
version = "0.2.0"
description = "Local wallet for BlockKick blockhain"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alexander Lipov", email = "arekusanda.lipov@gmail.com" }
]
keywords = ["blockchain", "wallet", "cli", "cryptocurrency", "kickstarter", "blockkick"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "cryptography>=43.0.0",
]

[project.scripts]
blockkick = "blockkick.cli:app"

[tool.setuptools.packages.find]
where = ["src"]