[project]
name = "blockkick"
version = "0.2.0"
description = "Local wallet for BlockKick blockhain"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alexander Lipov", email = "arekusanda.lipov@gmail.com" }
]
keywords = ["blockchain", "wallet", "cli", "cryptocurrency", "kickstarter", "blockkick"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
blockkick = "blockkick.cli:app"

[tool.poetry]
packages = [{include = "blockkick", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.0"
black = "^24.10.0"
mypy = "^1.13.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["blockkick"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit",
]
addopts = [
    "-v",
    "--cov=blockkick",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--strict-markers",
]

[tool.coverage.run]
source = ["blockkick"]
omit = [
    "*/__pycache__/*",
    "*/.venv/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disable_error_code = ["unused-ignore"]
